# DOL_Analyser

./: .gitignore  LICENSE  README.md  app.py  dol_analyser.spec  install.bat  install.sh  launcher.py  pyproject.toml  requirements.txt  run.bat  run.sh
.github/workflows/: release.yml
.streamlit/: config.toml
pipeline/: __init__.py  alignment.py  coupling.py  domains.py  dynamics.py  parse.py  precheck.py  profile.py  robustness.py  topics.py
reports/: __init__.py  charts.py  html_export.py
scripts/: diagnose.py
tests/: test_parse.py  test_precheck.py
