[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "chat-analyser"
version = "0.1.0"
description = "Analyse your ChatGPT and Claude conversation history locally"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "streamlit>=1.35",
    "plotly>=5.20",
]

[project.scripts]
chat-analyser = "app:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "reports*"]
